# mcp-agent-poc

./: .env.example  CLAUDE.md  README.md  pyproject.toml  start_agent.py  start_frontend.sh  start_rag_service.py
backend/: main.py
backend/agent/: langchain_agent.py
backend/rag_service/: dummy_rag.py
backend/tools/: mcp_rag_tool.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx
