[project]
name = "mcp-agent-poc"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Taein KIM", email = "sappho192@gmail.com"},
]
dependencies = ["langchain>=0.3.25", "langchain-openai>=0.3.24", "fastapi>=0.115.13", "uvicorn>=0.34.3", "pydantic>=2.11.7", "requests>=2.32.4", "python-multipart>=0.0.20", "python-dotenv>=1.1.0"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
